@@ -1,12 +1,14 @@
 language: python
 
 python:
+  - 3.6
   - 3.5
   - 3.4
   - 3.3
   - 2.7
 
 env:
+  - DJANGO="Django>=1.11,<1.12"
   - DJANGO="Django>=1.10,<1.11"
   - DJANGO="Django>=1.9,<1.10"
   - DJANGO="Django>=1.8,<1.9"
@@ -22,6 +24,13 @@ script: coverage run -a --source=sitecats sitecats/runtests.py
 matrix:
 
   exclude:
+   - python: 3.6
+     env: DJANGO="Django>=1.7,<1.8"
+   - python: 3.6
+     env: DJANGO="Django>=1.6,<1.7"
+   - python: 3.6
+     env: DJANGO="Django>=1.5,<1.6"
+
    - python: 3.5
      env: DJANGO="Django>=1.7,<1.8"
    - python: 3.5
@@ -29,6 +38,8 @@ matrix:
    - python: 3.5
      env: DJANGO="Django>=1.5,<1.6"
 
+   - python: 3.3
+     env: DJANGO="Django>=1.11,<1.12"
    - python: 3.3
      env: DJANGO="Django>=1.10,<1.11"
    - python: 3.3
