@@ -1,6 +1,6 @@
 [tox]
-envlist = py{27,32,33,34}-django{15,16,17,18,19,110}
-          py{35}-django{18,19,110}
+envlist = py{27,32,33,34}-django{15,16,17,18,19,110,111}
+          py{35,36}-django{18,19,110,111}
 
 install_command = pip install {opts} {packages}
 skip_missing_interpreters = True
@@ -12,6 +12,7 @@ basepython =
     py33: python3.3
     py34: python3.4
     py35: python3.5
+    py36: python3.6
 
 commands = python sitecats/runtests.py
 
@@ -22,3 +23,4 @@ deps =
     django18: Django>=1.8,<1.9
     django19: Django>=1.9,<1.10
     django110: Django>=1.10,<1.11
+    django111: Django>=1.11,<1.12
