@@ -2,6 +2,11 @@ django-sitecats changelog
 =========================
 
 
+Unreleased
+----------
++ Django 1.11 compatibility improvements.
+
+
 v0.6.2
 ------
 * Package distribution fix.
